--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <h1>Mi priemra pagina web</h1>
         <h2>Esta es mi primera pagina web</h2>
         <h3>Esta es mi primera pagina web</h3>
-        <<p>Esto es un parrafo normal</p>
+        <p>Esto es un parrafo normal</p>
         <<strong>Esto es un parrafo normal</strong>
-        <<em>Esto es un parrafo normal</em>
+        <em>Esto es un parrafo normal</em>
+        <p>Avance de proyecto</p>
+            
         
         <a href="http://www.utp.edu.pe">Visita la UTP</a>
     </body>
