--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <h1>Mi priemra pagina web</h1>
         <h2>Esta es mi primera pagina web</h2>
         <h3>Esta es mi primera pagina web</h3>
+        <h4>Esta es mi priemera pagina web</h4>
         <p>Esto es un parrafo normal</p>
         <<strong>Esto es un parrafo normal</strong>
         <em>Esto es un parrafo normal</em>
