--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <em>Esto es un parrafo normal</em>
         <p>Avance de proyecto</p>
         <H1>Avnace de proyecto</H1>
+        <h2>Avance de proyecto</h2>
             
         
         <a href="http://www.utp.edu.pe">Visita la UTP</a>
