--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <h4>Esta es mi primera pagina web</h4>
         <h5>Esta es mi primera pagina web</h5>
         <p>Esto es un parrafo normal</p>
-        <<strong>Esto es un parrafo normal</strong>
+        <strong>Esto es un parrafo normal</strong>
         <em>Esto es un parrafo normal</em>
         <p>Avance de proyecto</p>
         <H1>Avnace de proyecto</H1>
         <h2>Avance de proyecto</h2>
         <h3>Avance de proyecto</h3>
+        <strong>Esto es un parrafo</strong>
             
         
         <a href="http://www.utp.edu.pe">Visita la UTP</a>
