--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <H1>Avnace de proyecto</H1>
         <h2>Avance de proyecto</h2>
         <h3>Avance de proyecto</h3>
+        <h4>Avance de proyecto</h4>
         <strong>Esto es un parrafo</strong>
             
         
