--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <h3>Esta es mi primera pagina web</h3>
         <h4>Esta es mi primera pagina web</h4>
         <h5>Esta es mi primera pagina web</h5>
+        <h6>Esta es mi primera pagina web</h6>
         <p>Esto es un parrafo normal</p>
         <strong>Esto es un parrafo normal</strong>
         <em>Esto es un parrafo normal</em>
