--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <h2>Avance de proyecto</h2>
         <h3>Avance de proyecto</h3>
         <h4>Avance de proyecto</h4>
+        <h5>Avance de proyecto</h5>
         <strong>Esto es un parrafo</strong>
             
         
