--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <h3>Avance de proyecto</h3>
         <h4>Avance de proyecto</h4>
         <h5>Avance de proyecto</h5>
+        <h6>Avance de proyecto</h6>
         <strong>Esto es un parrafo</strong>
             
         
