--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <h5>Avance de proyecto</h5>
         <h6>Avance de proyecto</h6>
         <strong>Esto es un parrafo</strong>
+        <h1>esto es un parrafo</h1>
             
         
         <a href="http://www.utp.edu.pe">Visita la UTP</a>
