--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <h6>Avance de proyecto</h6>
         <strong>Esto es un parrafo</strong>
         <h1>esto es un parrafo</h1>
+        <h2>Esto es un parrafo</h2>
             
         
         <a href="http://www.utp.edu.pe">Visita la UTP</a>
