--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <strong>Esto es un parrafo</strong>
         <h1>esto es un parrafo</h1>
         <h2>Esto es un parrafo</h2>
+        <h3>Esto no es un parrafo</h3>
             
         
         <a href="http://www.utp.edu.pe">Visita la UTP</a>
