--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <h2>Esto es un parrafo</h2>
         <h3>Esto no es un parrafo</h3>
         <h1>Esto no es un avance</h1>
+        <h2>Esto no es un avance</h2>
         
         <a href="http://www.utp.edu.pe">Visita la UTP</a>
     </body>
