--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <h3>Esto no es un parrafo</h3>
         <h1>Esto no es un avance</h1>
         <h2>Esto no es un avance</h2>
+        <p>Esto es avance</p>
         
         <a href="http://www.utp.edu.pe">Visita la UTP</a>
     </body>
